Crash related to themes/user preferences autosaving #64444

Closed
opened 2019-05-10 17:28:37 +02:00 by TheRedWaxPolice · 11 comments

System Information
Win 10 64 bits

Blender Version
Broken: blender-2.80-196dbc0f314e-win64
Worked: Previous builds

Exact steps for others to reproduce the error
This is probably related to the new user preferences autosaving feature?
So to start fresh you need to delete the userpref.blend file inside the folder %appdata%\Blender Foundation\Blender\2.80\config
Now launch blender and go to Edit -> Preferences -> Themes and choose let's say, Blender Light, and then close Blender. (Sometimes It crashes in this step as well)
Now repeat this process again, go to Edit -> Preferences -> Themes -> Blender Light. (Blender will crash when choosing the theme)

There are some rare cases where it doesn't crash, but most of the time it does.

**System Information** Win 10 64 bits **Blender Version** Broken: blender-2.80-196dbc0f314e-win64 Worked: Previous builds **Exact steps for others to reproduce the error** This is probably related to the new user preferences autosaving feature? So to start fresh you need to delete the `userpref.blend` file inside the folder `%appdata%\Blender Foundation\Blender\2.80\config` Now launch blender and go to Edit -> Preferences -> Themes and choose let's say, Blender Light, and then close Blender. (Sometimes It crashes in this step as well) Now repeat this process again, go to Edit -> Preferences -> Themes -> Blender Light. (Blender will crash when choosing the theme) There are some rare cases where it doesn't crash, but most of the time it does.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

#64451 was marked as duplicate of this issue

#64451 was marked as duplicate of this issue

Added subscribers: @ideasman42, @brecht

Added subscribers: @ideasman42, @brecht
Campbell Barton was assigned by Brecht Van Lommel 2019-05-10 17:31:56 +02:00

@ideasman42, maybe it's best to revert this autosaving until it's more complete and tested.

@ideasman42, maybe it's best to revert this autosaving until it's more complete and tested.

Added subscriber: @Regnas

Added subscriber: @Regnas

Confirmed.
Can't switch themes, crashes all the time.

Confirmed. Can't switch themes, crashes all the time.

Added subscriber: @SergienkoEugene

Added subscriber: @SergienkoEugene

Confirmed.

and does not save changes to the *color of the icons without frame and 100% black.
*Click save user settings.
*Click save startup file.
*After reboot icons are white.

Confirmed. and does not save changes to the *color of the icons without frame and 100% black. *Click save user settings. *Click save startup file. *After reboot icons are white.

This issue was referenced by 1ee77eb7f8

This issue was referenced by 1ee77eb7f8f49d4e4483b57bb5b7d971b280f24c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @nokipaike

Added subscriber: @nokipaike
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64444
No description provided.