Fix error in recent is_dirty preferences flag

Error in b95b6b796695a8b82 caused crash changing themes.

Resolves T64444